--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -17,7 +17,11 @@
 				</li>
 			</ul>
 			<div class="d-flex">
-				<button class="btn btn-secondary my-2 my-sm-0">Login</button>
+				{% if app.user %}
+					<a href="{{ path('app_logout') }}" class="btn btn-danger my-2 my-sm-0">Logout</a>
+				{% else %}
+					<a href="{{ path('app_login') }}" class="btn btn-secondary my-2 my-sm-0">Login</a>
+				{% endif %}
 			</div>
 		</div>
 	</div>
