--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,42 +1,93 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Log in!
+{% endblock %}
+
+{% block stylesheets %}
+    <style>
+    a {
+        text-decoration: none;
+    }
+    .login-page {
+        width: 100%;
+        display: inline-block;
+        display: flex;
+        align-items: center;
+    }
+    .form-right i {
+        font-size: 100px;
+    }
+    </style>
+{% endblock %}
 
 {% block body %}
-<form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+	<div class="login-page bg-light">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-10 offset-lg-1">
+					<h3 class="mb-3">Login Now</h3>
+					<div class="bg-white shadow rounded">
+						<div class="row">
+							<div class="col-md-7 pe-0">
+								<div class="form-left h-100 py-5 px-5">
+									<form class="row g-4" method="post">
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+                                        {% if error %}
+                                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                        {% endif %}
 
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
 
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
-</form>
+										<div class="col-12">
+											<label>Email<span class="text-danger">*</span>
+											</label>
+											<div class="input-group">
+												<div class="input-group-text">
+													<i class="fas fa-user"></i>
+												</div>
+                                                <input type="email" value="{{ last_username }}" placeholder="Enter Email" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
+											</div>
+										</div>
+
+										<div class="col-12">
+											<label>Password<span class="text-danger">*</span>
+											</label>
+											<div class="input-group">
+												<div class="input-group-text">
+													<i class="fas fa-lock"></i>
+												</div>
+                                                <input type="password" name="password" placeholder="Enter Password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+                                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+											</div>
+										</div>
+
+										<div class="col-sm-6">
+										</div>
+
+										<div class="col-sm-6">
+                                            <a class="float-end text-primary" href="{{ path('app_register') }}">
+                                                Dont have an account yet?
+                                            </a>
+										</div>
+
+										<div class="col-12">
+											<button type="submit" class="btn btn-primary px-4 float-end mt-4">login</button>
+										</div>
+									</form>
+								</div>
+							</div>
+							<div class="col-md-5 ps-0 d-none d-md-block">
+								<div class="form-right h-100 bg-primary text-white text-center pt-5">
+									<i class="fas fa-sign-in"></i>
+									<h2 class="fs-1">Welcome Back!!!</h2>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 {% endblock %}
