--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -12,9 +12,11 @@
 						<span class="visually-hidden">(current)</span>
 					</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="{{ path('article_index') }}">Articles</a>
-				</li>
+				{% if app.user %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('article_index') }}">Articles</a>
+					</li>
+				{% endif %}
 			</ul>
 			<div class="d-flex">
 				{% if app.user %}
